# opa-operator

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  Tiltfile  crate-hashes.json  default.nix  deny.toml  flake.nix
.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  build_artifacts.yml  nightly.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
crd/: Cargo.toml
crd/src/: error.rs  lib.rs  util.rs
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: opa.crd.yaml  opacluster.crd.yaml  openpolicyagent.crd.yaml  server.opa.crd.yaml
deploy/helm/opa-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/opa-operator/configs/: properties.yaml
deploy/helm/opa-operator/crds/: crds.yaml
deploy/helm/opa-operator/rules/: stackable.userinfo.rego
deploy/helm/opa-operator/templates/: clusterrole-opa-builder.yaml  clusterrole-operator.yaml  clusterrole-product.yaml  configmap-rules.yaml  deployment.yaml  roles-opa-builder.yaml  roles.yaml  service.yaml  serviceaccount.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles-opa-builder.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: configmap.yaml  opacluster.yaml  stackable-opa-operator.clusterserviceversion.yaml
docker/: Dockerfile  Dockerfile.builder  Dockerfile.helper
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  discovery.adoc  env_var_args.adoc  implementation-notes.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/opa/: nav.adoc
docs/modules/opa/pages/: cluster_operations.adoc  commandline_args.adoc  discovery.adoc  implementation-notes.adoc  index.adoc  usage.adoc
docs/modules/opa/partials/: nav.adoc  supported-versions.adoc
examples/: opa-cluster-without-rego-server.yaml  simple-opa-cluster.yaml  simple-opacluster.yaml  simple-rule.yaml
extra/: crds.yaml
hack/: world.md
nix/: meta.json  sources.json
operator/: Cargo.toml
operator/src/: error.rs  lib.rs  pod_utils.rs
packaging/debian/: stackable-opa-operator.service
rust/bundle-builder/: Cargo.toml
rust/bundle-builder/src/: main.rs
rust/bundle-helper/: Cargo.toml  build.rs
rust/bundle-helper/src/: main.rs
rust/crd/: Cargo.toml
rust/crd/src/: discovery.rs  error.rs  lib.rs  resource_info_fetcher.rs  user_info_fetcher.rs  util.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: controller.rs  discovery.rs  lib.rs  main.rs  opa_controller.rs  product_logging.rs  service.rs  stackable-opa-operator.rs  user_info_fetcher.rs
rust/operator-binary/src/controller/: build.rs  dereference.rs  mod.rs  validate.rs
rust/operator-binary/src/crd/: mod.rs  user_info_fetcher.rs
rust/operator-binary/src/crd/resource_info_fetcher/: mod.rs  v1alpha1_impl.rs
rust/operator-binary/src/crd/user_info_fetcher/: mod.rs  v1alpha1_impl.rs  v1alpha2_impl.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: discovery.rs  error.rs  lib.rs  opa_controller.rs  utils.rs
rust/regorule-library/: Cargo.toml  README.md
rust/regorule-library/src/: lib.rs
rust/regorule-library/src/resourceinfo/: v1.rego
rust/regorule-library/src/userinfo/: v1.rego
rust/resource-info-fetcher/: Cargo.toml
rust/resource-info-fetcher/src/: http_error.rs  main.rs
rust/resource-info-fetcher/src/backend/: datahub.rs  mod.rs  openmetadata.rs
rust/resource-info-fetcher/src/backend/fixtures/: datahub_dataset.json  openmetadata_table.json
rust/resource-info-fetcher/src/utils/: tls.rs
rust/user-info-fetcher/: Cargo.toml  README.md
rust/user-info-fetcher/src/: http_error.rs  main.rs  util.rs
rust/user-info-fetcher/src/backend/: aas.rs  active_directory.rs  entra.rs  keycloak.rs  mod.rs  openldap.rs  xfsc_aas.rs
rust/user-info-fetcher/src/resourcebackend/: datahub.rs  dquantum.rs  mod.rs
rust/user-info-fetcher/src/utils/: tls.rs
scripts/: generate-manifests.sh  run-tests  run_tests.sh
server/: Cargo.toml  build.rs
server/packaging/rpm/SOURCES/stackable-opa-operator-server-VERSION/usr/lib/systemd/system/: stackable-opa-operator-server.service
server/src/: main.rs
tests/: release.yaml  test-definition.yaml
tests/templates/kuttl/aas-user-info/: 00-misc-setup.yaml.j2  02-assert.yaml  02-install-aas.yaml.j2  10-install-opa.yaml.j2  20-assert.yaml  20-install-test-regorule.yaml  30-assert.yaml  test-regorule.py
tests/templates/kuttl/ad-user-info/: 10-install-opa.yaml.j2  test-regorule.py
tests/templates/kuttl/cluster-operation/: 10-assert.yaml  10-install-opa.yaml.j2  20-assert.yaml  20-stop-opa.yaml.j2  30-assert.yaml  30-pause-opa.yaml.j2  40-assert.yaml  40-restart-opa.yaml.j2
tests/templates/kuttl/config-overrides/: 05-assert.yaml  05-install-test-pod.yaml  10-assert.yaml.j2  10-install-opa.yaml.j2
tests/templates/kuttl/keycloak-user-info/: 02-install-keycloak.yaml.j2  03-assert.yaml  03-setup-keycloak.yaml.j2  04-install-keycloak.yaml.j2  04-keycloak-realm-cm.yaml  10-install-opa.yaml.j2  20-install-test-regorule.yaml  30-assert.yaml  30-prepare-test-regorule.yaml  test-regorule.py
tests/templates/kuttl/logging/: 01-assert.yaml  01-install-opa-vector-aggregator.yaml  02-assert.yaml  02-create-configmap-with-prepared-logs.yaml  02-install-opa.yaml.j2  03-assert.yaml  03-copy-prepared-logs.yaml  03-install-opa-test-runner.yaml  03-install-opa.yaml.j2  04-assert.yaml  04-install-opa-test-runner.yaml  04-test-log-aggregation.yaml  05-assert.yaml  (+6 more)
wip/: aas.yaml
(+74 files in other folders)
