[workspace]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "24.11.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/opa-operator"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
built = { version = "0.7", features = ["chrono", "git2"] }
byteorder = "1.5"
clap = "4.5"
derivative = "2.2"
flate2 = "1.0"
fnv = "1.0"
futures = { version = "0.3" }
hyper = "1.4"
indoc = "2.0"
ldap3 = { version = "0.11", features = ["gssapi", "tls"] }
moka = { version = "0.12", features = ["future"] }
native-tls = "0.2.12"
pin-project = "1.1"
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }
reqwest = { version = "0.12", features = ["json"] }
rustls-pemfile = "2.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.82.0" }
strum = { version = "0.26", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
url = "2.5"
uuid = "1.10"

# [patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
# stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
