[package]
name = "stackable-opa-crd"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
description = "Contains the Open Policy Agent CRD structs and utilities"
license = "OSL-3.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["derive"] }
kube-runtime = "0.52"
rand = "0.5"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.20"
strum_macros = "0.20"
tracing = "0.1"
thiserror = "1"
url = "2"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
indoc = "1.0"
rstest = "0.9"
serde_yaml = "0.8"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
