[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Operator for OpenPolicyAgent - The main binary"
edition = "2018"
license = "OSL-3.0"
name = "stackable-opa-operator-server"
version = "0.1.0-nightly"

[dependencies]
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-opa-crd = { path = "../crd" }
stackable-opa-operator = { path = "../operator" }

serde_yaml = "0.8"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-opa-operator-server", "opt/stackable/opa-operator/", "755"],
]
