[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Operator for OpenPolicyAgent"
edition = "2018"
license = "OSL-3.0"
name = "stackable-opa-operator-server"
version = "0.1.0-nightly"
build = "build.rs"

[dependencies]
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "add_create_config_maps_with_labels" }
stackable-opa-crd = { path = "../crd" }
stackable-opa-operator = { path = "../operator" }

clap = "2.33"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
serde_yaml = "0.8"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "add_create_config_maps_with_labels" }
stackable-opa-crd = { path = "../crd" }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-opa-operator-server", "opt/stackable/opa-operator/", "755"],
    ["../deploy/crd/openpolicyagent.crd.yaml", "etc/stackable/opa-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/opa-operator/config-spec/", "644"],
]
