[package]
name = "bundle-builder"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
clap.workspace = true
flate2 = "1.0.28"
futures.workspace = true
hyper.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
tar = "0.4.40"
tokio.workspace = true
tracing.workspace = true
