[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for OpenPolicyAgent - The Custom Resource Definition"
edition = "2021"
license = "OSL-3.0"
name = "stackable-opa-crd"
repository = "https://github.com/stackabletech/opa-operator"
version = "0.9.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.13.0" }

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.23"
strum_macros = "0.23"
tracing = "0.1"
