[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for OPA - The Custom Resource Definition"
edition = "2021"
license = "OSL-3.0"
name = "stackable-opa-crd"
repository = "https://github.com/stackabletech/opa-operator"
version = "23.4.0"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.1" }

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"
