[package]
name = "stackable-opa-crd"
description = "Contains the OPA CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
derivative.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true
