[package]
authors = ["Stackable GmbH <info@stackable.de>"]
build = "build.rs"
description = "Stackable Operator for OPA"
edition = "2021"
license = "OSL-3.0"
name = "stackable-opa-operator"
repository = "https://github.com/stackabletech/opa-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
stackable-opa-crd = { path = "../crd" }

clap = "4.1"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
pin-project = "1.0"

[build-dependencies]
built = { version =  "0.6", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
stackable-opa-crd = { path = "../crd" }
