[package]
name = "stackable-opa-operator"
description = "Stackable Operator for OPA"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
product-config.workspace = true
stackable-operator.workspace = true

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
pin-project.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true
