[package]
name = "stackable-opa-user-info-fetcher"
description = "Fetches user metadata from directory services"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stackable-opa-crd = { path = "../crd" }

axum.workspace = true
clap.workspace = true
futures.workspace = true
hyper.workspace = true
moka.workspace = true
pin-project.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tracing.workspace = true
