[package]
name = "stackable-opa-user-info-fetcher"
description = "Fetches user metadata from directory services"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-opa-crd = { path = "../crd" }

axum.workspace = true
clap.workspace = true
futures.workspace = true
hyper.workspace = true
moka.workspace = true
pin-project.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
ldap3 = "0.11.5"
native-tls = "0.2.12"
uuid = "1.10.0"
base64 = "0.22.1"
