[package]
name = "stackable-opa-user-info-fetcher"
description = "Fetches user metadata from directory services"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-opa-operator = { path = "../operator-binary" }
stackable-operator.workspace = true
stackable-telemetry.workspace = true

axum.workspace = true
base64.workspace = true
byteorder.workspace = true
clap.workspace = true
futures.workspace = true
hyper.workspace = true
ldap3.workspace = true
moka.workspace = true
native-tls.workspace = true
pin-project.workspace = true
reqwest.workspace = true
rustls-pemfile.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
